--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,62 @@ body {
 }
 
 .slick-next {
-	right: 20px;
+  right: 20px;
 }
 .slick-prev {
-	left: 20px;
+  left: 20px;
+}
+
+.search__inner {
+  padding: 60px 0 70px;
+}
+
+.search__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.search__form-label {
+	color: #888;
+	font-size: 24px;
+	line-height: 24px;
+	margin-right: 69px;
+}
+
+.search__form-input {
+  height: 70px;
+  padding: 0 15px;
+  border: 2px solid #c4c4c4;
+  width: 430px;
+  color: #888;
+  font-size: 18px;
+}
+
+.search__form-input::placeholder {
+  font-size: 18px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.search__form-button {
+  border: none;
+  background-color: #c4c4c4;
+  color: #fff;
+  padding: 21px 23px 21px 36px;
+  font-size: 24px;
+  cursor: pointer;
+  position: relative;
+}
+
+.search__form-button::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  background-image: url("../images/searchLoop.svg");
+  top: 26px;
+  left: 9px;
 }
